--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: L4zy9uy's Blog
-email: your-email@example.com
+email: hoanghuudon02hp@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Random things, random thought
 baseurl: "" # the subpath of your site, e.g. /blog
